--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,16 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "node --env-file=.env --watch server.js",
+    "test": "node run-jest.js",
+    "test:watch": "node run-jest.js --watch",
+    "test:coverage": "node run-jest.js --coverage",
+    "test:controllers": "node run-jest.js --testPathPattern=.*controller.test.js",
+    "test:models": "node run-jest.js models.test.js",
+    "test:integration": "node run-jest.js integration.test.js",
+    "test:ci": "node run-jest.js --ci --coverage",
+    "test:load": "k6 run tests/load-test.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +23,6 @@
     "backend": "file:",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^6.8.0",
@@ -27,10 +35,14 @@
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.45.0",
-    "jest": "^29.6.1",
-    "nodemon": "^3.0.1",
+    "jest": "^29.7.0",
+    "k6": "^0.0.0",
     "prettier": "^3.0.0",
+    "sqlite3": "^5.1.7",
     "supertest": "^6.3.3"
   }
 }
